# jaeger-struct

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
examples/: tracing.proto
src/jaeger-struct/: CGenerator.cpp  CGenerator.h  Generator.cpp  Generator.h
src/jaeger-struct/compiler/: ComplexType.cpp  ComplexType.h  Enum.cpp  Enum.h  Field.cpp  Field.h  FundamentalType.cpp  FundamentalType.h  Generator.cpp  Generator.h  Main.cpp  Strings.cpp  Strings.h  StringsTest.cpp  Struct.cpp  Struct.h  Type.cpp  Type.h  TypeRegistry.cpp  TypeRegistry.h  Union.cpp  Union.h
src/jaeger-struct/runtime/: common.c  common.h  list.c  list.h  optional.c  optional.h  string.c  string.h
